--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -2,7 +2,7 @@
     <div class="btn-group">
         <button class="btn btn-primary m-3" (click)="guardarCliente()">Guardar Cliente</button>
         <button class="btn btn-primary m-3" (click)="guardarProductos()">Guardar Productos</button>
-        <button class="btn btn-danger m-3" (click)="leer()">Leer </button>
+        
     </div>
 
     <div class="btn-group">
@@ -13,14 +13,14 @@
    
     
     <div class="container">
-        <div class="card mt-3 p-3" *ngFor="let cliente of clientes">
+        <div class="card mt-3 p-3" *ngFor="let cliente of clientesLocales">
             <p>Cliente: {{cliente.nombre}}</p>
             <p>Edad: {{cliente.edad}}</p>
         </div>
     </div>
 
     <div class="container">
-        <div class="card mt-3 p-3" *ngFor="let producto of productos">
+        <div class="card mt-3 p-3" *ngFor="let producto of productosLocales">
             <p>Nombre Producto: {{producto.nombre}}</p>
             <p>Precio: {{producto.precio | currency: 'ARG'}}</p>
         </div>
