Creacion de pedidos y, al tocar agregar en home, redireccionar a /productos y mostrar el nombre en el encabezado

--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -15,6 +15,9 @@
             <li class="nav-item">
             <a class="nav-link" routerLink="/pedidos" routerLinkActive="active" >Pedidos</a>
             </li>
+            <li class="navbar-text">
+                {{this.pedidosServicio.pedido.nombreCliente}}
+            </li>
         </ul>
         </div>
     </div>
