--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
                   <h5 class="card-title">{{cliente.nombre}} {{cliente.apellido}}</h5>
                   <h6 class="card-subtitle mb-2 text-muted">{{cliente.clienteId}}</h6>
                   <p class="card-text">{{cliente.direccion}}</p>
-                  <a href="#" class="card-link">Agregar</a>
+                  <a (click)="irAProductos(cliente)" class="card-link">Agregar</a>
                   <a href="#" class="card-link">Informacion</a>
                 </div>
             </div>
