--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -15,7 +15,7 @@
                   <h6 class="card-subtitle mb-2 text-muted">{{producto.productoId}}</h6>
                   <p class="card-text">{{producto.descripcion}}</p>
                   <p class="card-text strong">{{producto.precio | currency: "ARG"}}</p>
-                  <a href="#" class="card-link">Agregar</a>
+                  <a (click)="agregar(producto)" class="card-link">Agregar</a>
                   <a href="#" class="card-link">Eliminar</a>
                 </div>
             </div>
