Creacion e implementacion de seccion pedidos

--- a/src/app/pedidos/pedidos.component.html
+++ b/src/app/pedidos/pedidos.component.html
@@ -1,1 +1,30 @@
-<p>pedidos works!</p>
+<div class="container mt-3">
+          <div class="cliente">
+                    <h5>Cliente: {{this.pedidosServicio.pedido.nombreCliente}}</h5>
+                    <h6>Total: {{this.pedidosServicio.pedido.total | currency: "ARG"}}</h6>
+          </div>
+          <div class="detalle">
+                    <table class="table">
+                              <thead>
+                                <tr>
+                                  <th scope="col">ProductoId</th>
+                                  <th scope="col">Nombre</th>
+                                  <th scope="col">Cantidad</th>
+                                  <th scope="col">Precio</th>
+                                  <th scope="col">Total</th>        
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr *ngFor="let producto of this.pedidosServicio.pedido.pedidoDetalle">
+                                  
+                                  <td>{{producto.productoId}}</td>
+                                  <td>{{producto.nombreProducto}}</td>
+                                  <td>{{producto.cantidad}}</td>
+                                  <td>{{producto.precio | currency: "ARG"}}</td>
+                                  <td>{{producto.total | currency: "ARG"}}</td>
+                                </tr>
+                                
+                              </tbody>
+                            </table>
+          </div>
+</div>
