--- a/src/app/pedidos/pedidos.component.html
+++ b/src/app/pedidos/pedidos.component.html
@@ -26,5 +26,6 @@
                                 
                               </tbody>
                             </table>
+                            <button class="btn btn-primary" (click)="guardar()">Guardar</button>
           </div>
 </div>
