--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -13,7 +13,10 @@
             <a class="nav-link" routerLink="/productos" routerLinkActive="active" >Productos</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" routerLink="/pedidos" routerLinkActive="active" >Pedidos</a>
+            <a class="nav-link" routerLink="/pedidos" routerLinkActive="active" >Pedido Actual</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" routerLink="/listado-pedidos" routerLinkActive="active" >Listado de Pedido</a>
             </li>
             <li class="navbar-text">
                 {{this.pedidosServicio.pedido.nombreCliente}}
