--- a/src/app/pedidos/pedidos.component.html
+++ b/src/app/pedidos/pedidos.component.html
@@ -11,7 +11,8 @@
                                   <th scope="col">Nombre</th>
                                   <th scope="col">Cantidad</th>
                                   <th scope="col">Precio</th>
-                                  <th scope="col">Total</th>        
+                                  <th scope="col">Total</th>
+                                  <th scope="col">Eliminar</th>          
                                 </tr>
                               </thead>
                               <tbody>
@@ -22,6 +23,7 @@
                                   <td><input (input)="calcularTotal(posicion)" [(ngModel)]="producto.cantidad" type="text"></td>
                                   <td>{{producto.precio | currency: "ARG"}}</td>
                                   <td>{{producto.total | currency: "ARG"}}</td>
+                                  <td><button class="btn btn-danger" (click)="eliminar(posicion)">Eliminar</button></td>
                                 </tr>
                                 
                               </tbody>
