--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
 
     <div class="row mt-4">
         <div class="col-sm-3" *ngFor="let cliente of clientes">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 200;">
                 <div class="card-body">
                   <h5 class="card-title">{{cliente.nombre}} {{cliente.apellido}}</h5>
                   <h6 class="card-subtitle mb-2 text-muted">{{cliente.clienteId}}</h6>
