--- a/src/app/listado-pedidos/listado-pedidos.component.html
+++ b/src/app/listado-pedidos/listado-pedidos.component.html
@@ -1,7 +1,7 @@
 <div class="container">
           <div class="row mt-4">
                     <div class="col-sm-3" *ngFor="let pedido of listadoPedidos">
-                              <div class="card" style="width: 18rem;">
+                              <div class="card" style="width: 200;">
                               <div class="card-body">
                               <h5 class="card-title">{{pedido.nombreCliente}}</h5>
                               <h6 class="card-subtitle mb-2 text-muted">{{pedido.total | currency: "ARGS"}}</h6>
