--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -9,7 +9,7 @@
     <div class="row mt-4">
         
         <div class="col-sm-3" *ngFor="let producto of productos">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 200;">
                 <div class="card-body">
                   <h5 class="card-title">{{producto.nombre}} </h5>
                   <h6 class="card-subtitle mb-2 text-muted">{{producto.productoId}}</h6>
