--- a/src/app/agregar-clientes/agregar-clientes.component.html
+++ b/src/app/agregar-clientes/agregar-clientes.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-3">
     <form [formGroup]="formularioAgregar">
         <div class="form-group">
             <label>Nombre</label>
