--- a/src/app/agregar-productos/agregar-productos.component.html
+++ b/src/app/agregar-productos/agregar-productos.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-3">
     <form [formGroup]="formularioAgregarProducto">
         <div class="form-group">
             <label>Nombre</label>
