--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,14 +7,14 @@
     <button class="btn btn-primary mt-2" [routerLink]="['/agregar-Clientes']" >Agregar Cliente Nuevo</button>
 
     <div class="row mt-4">
-        <div class="col-sm-3" *ngFor="let cliente of clientes">
+        <div class="col-sm-3" *ngFor="let cliente of clientes; let posicion = index">
             <div class="card" style="width: 200;">
                 <div class="card-body">
                   <h5 class="card-title">{{cliente.nombre}} {{cliente.apellido}}</h5>
                   <h6 class="card-subtitle mb-2 text-muted">{{cliente.clienteId}}</h6>
                   <p class="card-text">{{cliente.direccion}}</p>
                   <button class="btn btn-primary" (click)="irAProductos(cliente)">Seleccionar</button>
-                  
+                  <button class="btn btn-danger" (click)="eliminar(posicion)">Eliminar</button>
                 </div>
             </div>
 
