--- a/src/app/agregar-clientes/agregar-clientes.component.html
+++ b/src/app/agregar-clientes/agregar-clientes.component.html
@@ -1,4 +1,10 @@
 <div class="container mt-3">
+    <div *ngIf="alert" class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>Felicidades!</strong> Agregaste un usuario correctamente.
+        <button (click)="cerrarAlert()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
     <form [formGroup]="formularioAgregar">
         <div class="form-group">
             <label>Nombre</label>
