--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,13 @@
     
     <button class="btn btn-primary mt-2" [routerLink]="['/agregar-Clientes']" >Agregar Cliente Nuevo</button>
 
+    <div *ngIf="alert" class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>Advertencia!</strong> A eliminado un cliente.
+        <button (click)="cerrarAlert()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
     <div class="row mt-4">
         <div class="col-sm-3" *ngFor="let cliente of clientes; let posicion = index">
             <div class="card" style="width: 200;">
