--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -6,6 +6,27 @@
     
     <button class="btn btn-primary mt-2" [routerLink]="['/agregar-Productos']" >Agregar Producto Nuevo</button>
 
+    <div *ngIf="alertCliente && !this.pedidosServicio.pedido.nombreCliente" class="alert alert-warning alert-dismissible fade show mt-3" role="alert">
+        <strong>Cuidado!</strong> Asegúrese de haber seleccionado un cliente.
+        <button (click)="cerrarWarning()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    
+    <div *ngIf="alert" class="alert alert-success alert-dismissible fade show mt-3" role="alert">
+        <strong>Felicidades!</strong> Agregaste un producto a tu pedido.
+        <button (click)="cerrarAlert()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+    <div *ngIf="alertEliminar" class="alert alert-danger alert-dismissible fade show mt-3" role="alert">
+        <strong>Advertencia!</strong> Eliminaste un producto.
+        <button (click)="cerrarAlertEliminar()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
     <div class="row mt-4">
         
         <div class="col-sm-3" *ngFor="let producto of productos; let posicion = index">
